--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -16,8 +16,8 @@
                         <textarea name="message" id="message" rows="6"></textarea>
                     </div>
                     <ul class="actions">
-                        <li><input type="submit" value="{{ .Site.Params.Contact.buttonSend }}" class="special" /></li>
-                        <li><input type="reset" value="{{ .Site.Params.Contact.buttonClear }}" /></li>
+                        <li><input type="submit" value="{{ .https://formspree.io/f/mgerqjge.Contact.buttonSend }}" class="special" /></li>
+                        <li><input type="reset" value="{{ .https://formspree.io/f/mgerqjge.Contact.buttonClear }}" /></li>
                     </ul>
                 </form>
             </section>
