--- a/themes/forty/layouts/partials/contact.html
+++ b/themes/forty/layouts/partials/contact.html
@@ -2,7 +2,7 @@
     <section id="contact">
         <div class="inner">
             <section>
-                <form method="post" action={{"https://formspree.io/{{https://formspree.io/f/mgerqjge}}">
+                <form method="post" action="https://formspree.io/f/mgerqjge">
                     <div class="field half first">
                         <label for="name">Name</label>
                         <input type="text" name="name" id="name" />
@@ -16,8 +16,8 @@
                         <textarea name="message" id="message" rows="6"></textarea>
                     </div>
                     <ul class="actions">
-                        <li><input type="submit" value="{{ .https://formspree.io/f/mgerqjge.Contact.buttonSend }}" class="special" /></li>
-                        <li><input type="reset" value="{{ .https://formspree.io/f/mgerqjge.Contact.buttonClear }}" /></li>
+                        <li><input type="submit" value="{{ .Site.Params.Contact.buttonSend }}" class="special" /></li>
+                        <li><input type="reset" value="{{ .Site.Params.Contact.buttonClear }}" /></li>
                     </ul>
                 </form>
             </section>
